--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <header class="header" id="home">
         <div class="container">
             <div class="infos">
-                <h6 class="subtitle">hello,I'm</h6>
+                <h6 class="subtitle">Hello,I'm</h6>
                 <h6 class="title">Nelly Laurene</h6>
                 <p style="margin-top: 0.3rem;">UI/UX & Graphic Designer</p>
 
@@ -170,7 +170,7 @@
         <div class="container text-center">
             <h6 class="subtitle">Skills</h6>
             <h6 class="section-title mb-4">Why Choose me</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
+            <p class="mb-5 pb-4">I focus on clear communication and creating modern designs. <br> Every project is crafted with attention to both creativity and usability.</p>
 
             <div class="row text-left">
                 <div class="col-sm-6">
@@ -207,7 +207,7 @@
         <div class="container text-center">
             <h6 class="subtitle">Portfolio</h6>
             <h6 class="section-title mb-4">Check My Wonderful Works</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
+            <p class="mb-5 pb-4">Each design is made to be both visually appealing and functional. <br> I’m dedicated to helping you bring your ideas to life.</p>
 
             <div class="row">
                 <div class="col-sm-4">
